// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`../Nav <Nav /> (dark mode) should render 1`] = `
<nav
  aria-label={
    <ul
      className="translation"
    >
      <li
        className="en"
      >
        Navigation links
      </li>
      <li
        className="es"
      >
        Links de navegación
      </li>
    </ul>
  }
>
  <ul
    className="List"
    disablePadding={true}
  >
    <li
      className="lib-react-dashboard-nav-li({'color':'theme.palette.primary.main','borderRight':'4px solid transparent'})"
    >
      <a
        className="Link lib-react-dashboard-nav-anchor({'color':'inherit','display':'block'})"
        onClick="props.onClick"
        to={
          Object {
            "pathname": "/foo",
          }
        }
      >
        <li
          className="ListItem"
          component="div"
        >
          <div
            className="ListItemIcon lib-react-dashboard-nav-liIcon({'color':'inherit','fontSize':24,'minWidth':40,'marginRight':16})"
          >
            <ul
              className="translation"
            >
              <li
                className="en"
              >
                <i>
                  EN Foo Icon
                </i>
              </li>
              <li
                className="es"
              >
                <i>
                  ES Foo Icon
                </i>
              </li>
            </ul>
          </div>
          <div
            className="ListItemText"
          >
            <ul
              className="translation"
            >
              <li
                className="en"
              >
                English Foo
              </li>
              <li
                className="es"
              >
                Spanish Foo
              </li>
            </ul>
          </div>
        </li>
      </a>
    </li>
    <li
      aria-label={
        <ul
          className="translation"
        >
          <li
            className="en"
          >
            Current page
          </li>
          <li
            className="es"
          >
            Página actual
          </li>
        </ul>
      }
      className="lib-react-dashboard-nav-li({'color':'theme.palette.primary.main','borderRight':'4px solid transparent'}) lib-react-dashboard-nav-activeLi({'color':'#33ccd7','backgroundColor':'#272727','borderRight':'4px solid currentColor'})"
    >
      <a
        className="Link lib-react-dashboard-nav-anchor({'color':'inherit','display':'block'})"
        onClick="props.onClick"
        to={
          Object {
            "pathname": "/bar",
          }
        }
      >
        <li
          className="ListItem"
          component="div"
        >
          <div
            className="ListItemIcon lib-react-dashboard-nav-liIcon({'color':'inherit','fontSize':24,'minWidth':40,'marginRight':16})"
          >
            <ul
              className="translation"
            >
              <li
                className="en"
              >
                <i>
                  EN Bar Icon
                </i>
              </li>
              <li
                className="es"
              >
                <i>
                  ES Bar Icon
                </i>
              </li>
            </ul>
          </div>
          <div
            className="ListItemText"
          >
            <ul
              className="translation"
            >
              <li
                className="en"
              >
                English Bar
              </li>
              <li
                className="es"
              >
                Spanish Bar
              </li>
            </ul>
          </div>
        </li>
      </a>
    </li>
    <li
      className="lib-react-dashboard-nav-li({'color':'theme.palette.primary.main','borderRight':'4px solid transparent'})"
    >
      <a
        className="Link lib-react-dashboard-nav-anchor({'color':'inherit','display':'block'})"
        onClick="props.onClick"
        to={
          Object {
            "pathname": "/baz",
          }
        }
      >
        <li
          className="ListItem"
          component="div"
        >
          <div
            className="ListItemIcon lib-react-dashboard-nav-liIcon({'color':'inherit','fontSize':24,'minWidth':40,'marginRight':16})"
          >
            <ul
              className="translation"
            >
              <li
                className="en"
              >
                <i>
                  EN Baz Icon
                </i>
              </li>
              <li
                className="es"
              >
                <i>
                  ES Baz Icon
                </i>
              </li>
            </ul>
          </div>
          <div
            className="ListItemText"
          >
            <ul
              className="translation"
            >
              <li
                className="en"
              >
                English Baz
              </li>
              <li
                className="es"
              >
                Spanish Baz
              </li>
            </ul>
          </div>
        </li>
      </a>
    </li>
  </ul>
</nav>
`;

exports[`../Nav <Nav /> (light mode) should render 1`] = `
<nav
  aria-label={
    <ul
      className="translation"
    >
      <li
        className="en"
      >
        Navigation links
      </li>
      <li
        className="es"
      >
        Links de navegación
      </li>
    </ul>
  }
>
  <ul
    className="List"
    disablePadding={true}
  >
    <li
      className="lib-react-dashboard-nav-li({'color':'theme.palette.primary.main','borderRight':'4px solid transparent'})"
    >
      <a
        className="Link lib-react-dashboard-nav-anchor({'color':'inherit','display':'block'})"
        onClick="props.onClick"
        to={
          Object {
            "pathname": "/foo",
          }
        }
      >
        <li
          className="ListItem"
          component="div"
        >
          <div
            className="ListItemIcon lib-react-dashboard-nav-liIcon({'color':'inherit','fontSize':24,'minWidth':40,'marginRight':16})"
          >
            <ul
              className="translation"
            >
              <li
                className="en"
              >
                <i>
                  EN Foo Icon
                </i>
              </li>
              <li
                className="es"
              >
                <i>
                  ES Foo Icon
                </i>
              </li>
            </ul>
          </div>
          <div
            className="ListItemText"
          >
            <ul
              className="translation"
            >
              <li
                className="en"
              >
                English Foo
              </li>
              <li
                className="es"
              >
                Spanish Foo
              </li>
            </ul>
          </div>
        </li>
      </a>
    </li>
    <li
      aria-label={
        <ul
          className="translation"
        >
          <li
            className="en"
          >
            Current page
          </li>
          <li
            className="es"
          >
            Página actual
          </li>
        </ul>
      }
      className="lib-react-dashboard-nav-li({'color':'theme.palette.primary.main','borderRight':'4px solid transparent'}) lib-react-dashboard-nav-activeLi({'color':'#017982','backgroundColor':'#f1f1f1','borderRight':'4px solid currentColor'})"
    >
      <a
        className="Link lib-react-dashboard-nav-anchor({'color':'inherit','display':'block'})"
        onClick="props.onClick"
        to={
          Object {
            "pathname": "/bar",
          }
        }
      >
        <li
          className="ListItem"
          component="div"
        >
          <div
            className="ListItemIcon lib-react-dashboard-nav-liIcon({'color':'inherit','fontSize':24,'minWidth':40,'marginRight':16})"
          >
            <ul
              className="translation"
            >
              <li
                className="en"
              >
                <i>
                  EN Bar Icon
                </i>
              </li>
              <li
                className="es"
              >
                <i>
                  ES Bar Icon
                </i>
              </li>
            </ul>
          </div>
          <div
            className="ListItemText"
          >
            <ul
              className="translation"
            >
              <li
                className="en"
              >
                English Bar
              </li>
              <li
                className="es"
              >
                Spanish Bar
              </li>
            </ul>
          </div>
        </li>
      </a>
    </li>
    <li
      className="lib-react-dashboard-nav-li({'color':'theme.palette.primary.main','borderRight':'4px solid transparent'})"
    >
      <a
        className="Link lib-react-dashboard-nav-anchor({'color':'inherit','display':'block'})"
        onClick="props.onClick"
        to={
          Object {
            "pathname": "/baz",
          }
        }
      >
        <li
          className="ListItem"
          component="div"
        >
          <div
            className="ListItemIcon lib-react-dashboard-nav-liIcon({'color':'inherit','fontSize':24,'minWidth':40,'marginRight':16})"
          >
            <ul
              className="translation"
            >
              <li
                className="en"
              >
                <i>
                  EN Baz Icon
                </i>
              </li>
              <li
                className="es"
              >
                <i>
                  ES Baz Icon
                </i>
              </li>
            </ul>
          </div>
          <div
            className="ListItemText"
          >
            <ul
              className="translation"
            >
              <li
                className="en"
              >
                English Baz
              </li>
              <li
                className="es"
              >
                Spanish Baz
              </li>
            </ul>
          </div>
        </li>
      </a>
    </li>
  </ul>
</nav>
`;

exports[`../Nav should use the right versions of its dependencies 1`] = `
Object {
  "@material-ui/core": "^4.5.0",
  "react": "^16.10.1",
}
`;
